# real_state_servers

real_state_api/: Cargo.toml  api_examples.md  readme.md
real_state_api/src/: main.rs  routes.rs
real_state_api/src/lib/: constants.rs  db.rs  mod.rs
real_state_api/src/lib/structs/: auth.rs  mod.rs  typed.rs  user.rs
real_state_api/static/: swagger.yml
reverse_proxy_http/: Cargo.toml
reverse_proxy_http/src/: main.rs
