[package]
name = "real_state_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.1.0"
futures = "0.3"
sha2 = "0.10"
base64ct = { version = "1.4", features = ["alloc"] }
rand = "0.8"
jsonwebtoken = "8.0.1"
chrono = "0.4.19"
